src/public/css/styles.css
.admin-user-list-row {
    border-top: 1px lightgray solid;
}

.admin-user-list-row:first-child {
    border-top: none;
}

.admin-user-list-row .row {
    padding-left: 15px;
    padding-right: 15px;
}

.admin-user-list-row span.pull-right a {
    margin-left: 10px;
}

.btn.btn-blue {
    color: white;
    background-color: rgba(59, 89, 152, 0.92);
    border-color: rgba(59, 89, 152, 0.92);
}

.btn-half {
    width: 49%;
}

.centered-tabs {
    text-align: center;
}

.content-panel {
    background-color: rgba(255, 255, 255, 0.92);
    border-radius: 5px;

    transition: max-height 1s;
    padding: 0px 10px 10px;
    margin: 0px 15px 15px;
    min-height: 100px;
}

.container-fluid>.row {
    margin: 7px 5px;
}

.delete-comment-button:hover {
    cursor: pointer;
}

.dropdown-tab-label {
    float: none;
    display: inline-block;
    width: 50%;
}

.dropdown-menu.open-overflow-right {
    left: 0;
    right: auto;
}

.dropdown-menu.open-overflow-left {
    left: auto;
    right: 0;
}

.dropdown-tab-selection {
    width: 100%;
    text-align: center;
    border-bottom-right-radius: 7px;
    border-bottom-left-radius: 7px;
}

.fade-in.ng-hide-remove {
    animation: 0.5s fadeIn ease;
}

.fading-popup-message {
    display: none;
    width: 70%;
    text-align: center;
    position: absolute;
    z-index: 999;
    left: 50%;
    top: 65px;
    -ms-transform: translateX(-50%);
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
}

.fading-popup-message p {
    font-size: 1.2em;
}

.float-left {
    float: left;
}

.ingredients-list {
    max-width: 65vw;
    text-align: left;
    padding: 0;
}

.ingredients-list ul {
    padding-left: 20px;
}

#landing-page {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 25px;
    padding: 10px 28px;
}

#landing-page>h1 {
    font-size: 60px;
    margin-top: 5px;
}

#landing-page>h1,
#landing-page>h2,
#landing-page>h3 {
    color: white;
    outline-color: black;
    text-shadow: #000 0px 0px 4px;
}

.like-share-button-row button {
    margin: 0px 10px;
    padding: 4px 10px;
}

.loading-spinner {
    margin-top: 15px;
}

#main-panel {
    background-image: url("../assets/images/homepageBackground.jpg"), linear-gradient(to bottom, black 20%, white 100%);
    background-blend-mode: lighten;
    background-position: center center;
    background-size: cover;
    width: 100%;
    height: 500px;
    opacity: 1;
    margin-top: 50px;
}

.navbar-brand,
.nav-bar-page-tab {
    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4) !important;
}

.navbar-default {
    background: #e95420;
}

.nav-tabs>li>a {
    margin-right: 0;
}

#newCommentForm {
    text-align: left;
}

.panel.comment-panel{
    margin-top: 20px;
}

.panel-primary.comment-panel {
    border-color: rgba(245, 96, 44, 0.67);
}

.panel-primary.comment-panel .panel-heading {
    background-color: rgba(245, 96, 44, 0.67);
    border-color: rgba(245, 96, 44, 0.67);
}

.profile-picture-container {
    text-align: center;
}

.profile-picture-container img {
    height: 200px;
    width: 200px;
    border: 1px solid darkgray;
}

.profile-tab {
    padding: 8px 12px !important;
    font-size: 0.9em;
}

.profile-tab-container {
    padding: 0 15px 15px 15px;
}

.profile-tab-container h4 {
    margin-left: 10px;
}

.profile-tab-display-object {
    float: left;
    max-width: 98%;
    border: 1px solid lightgray;
    margin: 4px 6px;
    padding: 8px;
    box-shadow: 3px 3px 10px #888888;
}

.profile-tab-display-object img {
    float: left;
    margin-right: 5px;
}

.profile-tab-display-object a {
    float: left;
    word-break: break-all;
}

#recipeat-content-container {
    padding: 15px;
}

#recipeat-content-container.ng-enter {
    transition: .6s;
    opacity: 0;
}

#recipeat-content-container.ng-enter-active {
    opacity: 1;
}

.recipe-details-panel {
    text-align: center;
}

.recipe-details-panel .recipe-picture {
    margin: 0;
    padding: 0;
}

.recipe-picture {
    display: inline-block;
    max-width: 90%;
    max-height: 80vh;
}

.recipe-publisher-heading {
    margin: 5px;
}

.recipe-search-button-container {
    position: relative;
    margin-top: 10px;
    height: 40px;
}

.recipe-search-next-button {
    float: right;
}

.recipe-search-prev-button {
    float: left;
}

.recipe-search-result {
    padding: 10px 10px;
    border-top: 1px lightgray solid;
    opacity: 1;
}

.row {
    margin: 5px -10px;
}

.search-results-container {
    padding-bottom: 10px;
}

.search-result-publisher-text {
    float: left;
    margin-left: 15px;
}

.tab-content {
    background-color: white;
    border-width: 0 1px 1px 1px;
    border-color: #dddddd;
    border-style: solid;
    min-height: 100px;
}

.thumbnail-col {
    padding-top: 5px;
    padding-right: 0px;
}

.thumbnail-image {
    border: 1px solid darkgray;
    max-width: 100%;
    max-height: 100%;
}

.user-action-button-panel {
    margin: 10px;
    display: block;
}

.user-content-panel {
    margin-top: 25px;
}

.user-content-panel .row {
    margin: 0 10px;
}

.user-info-panel {
    text-align: center;
}

.wrap-text {
    overflow-wrap: break-word;
    word-wrap: break-word;
}

@media screen and (max-width: 480px) {
    .btn-half {
        width: 48%;
    }

    #landing-page {
        text-align: center;
        background-color: rgba(0, 0, 0, 0.5);
        border-radius: 20px;
        padding: 10px 18px;
    }

    #landing-page>h1 {
        font-size: 48px;
    }

    .profile-tab-container {
        padding: 0 5px 15px 5px;
        text-align: center;
    }

    .profile-tab-display-object {
        float: none;
        display: inline-block;
        text-align: left;
        font-size: .87em;
    }

    .search-results-container h4 {
        margin-top: 0px;
    }
}

@media screen and (max-width: 767px) {
    .search-result-publisher-text {
        max-width: 30vw;
    }

    .thumbnail-image {
        max-width: 30vw;
    }

    .user-content-panel {
        margin-top: 25px;
    }
}

@media screen and (max-width: 992px) {
    .user-info-panel {
        text-align: center;
    }

    .user-content-panel {
        margin-top: 15px;
    }
}

@media screen and (min-width: 768px) {

    .navbar-form .input-group {
        width: 70%;
    }

    #navbar-search-form {
        text-align: center;
    }

    #navbar-recipe-search-input {
        width: 50vw;
    }
}

@media screen and (min-width: 992px) {
    .ingredients-list h2,
    .ingredients-list h3 {
        margin-top: 5px;
    }

    .recipe-picture {
        text-align: right;
    }

    .recipe-picture .recipe-picture {
        margin-right: 15px;
    }
}

@media screen and (min-width: 1400px) {
    .btn-half {
        width: 49.5%;
    }
}

